--- a/gb/23/4/7/n13967677.md
+++ b/gb/23/4/7/n13967677.md
@@ -1,36 +1,36 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>张菁：中共“15万精兵计划”为何被共产国际否决</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/12/MAIN201209291352000138458592106-1-600x376.jpg" />
 <h6>中华民国政府军赢得了抗日战争的胜利，中共说自己是抗日战争的“中流砥柱”，其实是无耻的谎言。图为蒋介石在庐山军官训练团视察。（公有领域）
 </h6>
 <hr>
-	<p>【大纪元2023年04月08日讯】中共在其党史中，一再宣称自己是抗日的主力，但大量的史料证实，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>领导的国民政府军队才是中国抗击日本入侵者的主要力量。与之相反，中共在抗日战争期间，却置国难而不顾，一味壮大自己搞分裂。其意图借日本侵略中国之机消灭国民政府以取而代之的真实历史也渐为人知。</p>
-<p>《社会科学》2006年第一期的文章《莫斯科与延安关系的另一种记录》一文中披露了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%9B%BD%E9%99%85.md#1">共产国际</a>之间往来的一些历史资料，这些历史资料来自于《季米特洛夫日记》和《共产国际与中共关系》这两本书中，这些史料也进一步佐证了中共在抗日战争期间无视国家危亡，不积极抗日，却时时将抗日的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>国民政府作为主要敌人的事实。</p>
-<p>尤其是《季米特洛夫日记》，因其本人曾于1935年任<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%9B%BD%E9%99%85.md#1">共产国际</a>总书记，直接负责中国事务，在中共与斯大林之间担任沟通协调工作的原因而具有较为重要的历史价值，其中所记录的中共与莫斯科之间的往来互动，都对正确解读中共历史有着非常重要的帮助。</p>
+	<p>【大纪元2023年04月08日讯】中共在其党史中，一再宣称自己是抗日的主力，但大量的史料证实，蒋介石领导的国民政府军队才是中国抗击日本入侵者的主要力量。与之相反，中共在抗日战争期间，却置国难而不顾，一味壮大自己搞分裂。其意图借日本侵略中国之机消灭国民政府以取而代之的真实历史也渐为人知。</p>
+<p>《社会科学》2006年第一期的文章《莫斯科与延安关系的另一种记录》一文中披露了毛泽东与共产国际之间往来的一些历史资料，这些历史资料来自于《季米特洛夫日记》和《共产国际与中共关系》这两本书中，这些史料也进一步佐证了中共在抗日战争期间无视国家危亡，不积极抗日，却时时将抗日的蒋介石国民政府作为主要敌人的事实。</p>
+<p>尤其是《季米特洛夫日记》，因其本人曾于1935年任共产国际总书记，直接负责中国事务，在中共与斯大林之间担任沟通协调工作的原因而具有较为重要的历史价值，其中所记录的中共与莫斯科之间的往来互动，都对正确解读中共历史有着非常重要的帮助。</p>
 <p><strong>共产国际对中共的援助是全方位的</strong></p>
-<p>事实上，吸着苏共奶水长大的中共一直都依靠莫斯科提供的经费维持，据《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>与莫斯科的恩恩怨怨》一书中记载，陈独秀公开承认：“党的经费，几乎完全是从共产国际领来的”，他给共产国际的报告中也写着，中共自1921年10月至1922年6月期间所花费的17655元，来自共产国际的就有16655元，自行募捐仅1000元。</p>
+<p>事实上，吸着苏共奶水长大的中共一直都依靠莫斯科提供的经费维持，据《毛泽东与莫斯科的恩恩怨怨》一书中记载，陈独秀公开承认：“党的经费，几乎完全是从共产国际领来的”，他给共产国际的报告中也写着，中共自1921年10月至1922年6月期间所花费的17655元，来自共产国际的就有16655元，自行募捐仅1000元。</p>
 <p>为了支持这个共产国际的远东支部，莫斯科提供的经费源源不断，就中共中央每月平均得款而言，1924年为3000元，1925年3300元，1926年不少于万元，1927年不少于3万元，1928年至1932年，每月预算更是在5万元。而除了这笔经费，还有很多用于特别事件的“特别费”。</p>
 <p>《季米特洛夫日记》（以下简称《日记》）也在1936年9月11日记录了共产国际决定向中国红军提供1.5万~2万支步枪、8门火炮、10门迫击炮和相当数量的外国制式的弹药的事实。为此，共产国际同意中共红军发动宁夏战役，以便前往中蒙交界地区接运这批军事物资。</p>
 <p>《日记》记载，1936年9月20日，季米特洛夫向联共（布）中央政治局提交了从财政上援助中共的书面报告。12月2日得到批准。苏共将向中共红军提供1166吨军事物资，200.5万卢布和50万美元的财政援助，同时派遣484名军事技术人员进入新疆，包括驾驶员、技术员、指挥员等，准备帮助训练进入新疆的红军西路军人员。</p>
 <p>1941年6月21日，德国对苏联发动战争，共产国际为此要求中共牵制住日本，防止其与德国对苏联采取夹击行动。毛面对季米特洛夫的要求，提出了种种财政上的困难，季米特洛夫因此于7月2日向联共领导人莫洛托夫等送交了要求向中共提供200万美元援款的建议书。联共（布）中央讨论后，次日即批准马上援助中国同志100万美元。但因国民政府对苏联方面要求派飞机飞往延安一事未予答复，季米特洛夫明确致信莫洛托夫提出：“由于使中国同志尽快获得至少是一半的援助非常重要，我们相信有必要采取非法的方式用飞机通过蒙古发送运费。”</p>
-<p><strong>毛分裂<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E5%85%B1%E5%90%88%E4%BD%9C.md#1">国共合作</a>的</strong><strong>“</strong><strong>十五万精兵计划</strong><strong>”</strong></p>
+<p><strong>毛分裂国共合作的</strong><strong>“</strong><strong>十五万精兵计划</strong><strong>”</strong></p>
 <p>1936年12月西安军事政变之后，近于被消灭的中共得以生存了下来，正面抗日的国民党政府军力量在削弱，中共却“利用敌后空虚全力发展”。至1940年春，据不公开的统计，中共“军队总数已经达到50万之众”，地盘也从陕北一隅扩至“陕北而山西而河北而山东”的华北大部分地区。</p>
 <p>准备与蒋介石政府彻底决裂的毛早已制定了一个“集中15万精兵”打到国民党后方去的对国民政府采取先发制人的军事计划。1940年11月4日他亲自给季米特洛夫和曼努伊斯基写了一封长信，寻求共产国际的支持，“请求你们给以指示”，毛不仅准备以重兵攻入四川，而且还请求苏联出兵，帮助中共军队夺取兰州和甘、凉、肃三州，以建立军火走廊，为此求得苏共方面的支持。</p>
 <p>然而，苏联方面却需要蒋介石把日本人拖在中国泥潭中，以保全苏联。《日记》中记录，季米特洛夫经过斯大林同意后，复电毛明确表示不同意此计划，在与毛泽东往来的电报中，季米特洛夫最后强硬回复：“我们认为，破裂不是不可避免的。您不该将破裂作为出发点。相反，应该依靠主张维护统一战线的民众，尽我们共产党和军队所能作出的一切努力来避免内战的扩大。请重新考虑一下目前您对这个问题的态度。”</p>
 <p>毛并不赞同莫斯科的意见，但没有苏联的支持，先发制人的“15万精兵计划”只能泡汤。毛无法实施这一计划，但却明令新四军对国民政府军事委员会的“北移”调遣实行拖延，曰：“可以拖延一个月至两个月”，并批准了苏北新四军部发起曹甸战役的战斗计划。这一系列违抗国民政府军事命令的行为终于导致1941年1月的“皖南事变”，新四军7000余人被歼，军长叶挺被俘，政委项英和政治部主任袁国平等被杀，蒋介石公开宣布新四军为叛军并撤销了其番号。</p>
 <p>对此，毛怪罪共产国际没有同意他的“15万精兵计划”，他当即致电共产国际执委会书记处，通报了这一情况，并自我断定：不仅在皖南，包括在西北地区，国民党也集中了数十万军队，包围了陕甘宁边区，在江苏、山东、安徽、湖北四省也在向中共的游击队展开大规模进攻。“他们正准备在全国范围内搞大规模的逮捕和屠杀”，“我军有被全歼的危险”。</p>
-<p>得到这一消息，季米特洛夫大为震惊。他马上电告莫洛托夫，要求他转请斯大林立即向蒋介石施压。他还在18日亲自致函斯大林，指出：“为了避免这样的内战，在苏联方面采取的措施来影响蒋介石的同时，还应该在美国、英国和其他国家掀起相应的运动，这将对中国政府施加一定的压力并在一定程度上影响中国的舆论。”</p>
+<p>得到这一消息，季米特洛夫大为震惊。他马上电告莫洛托夫，要求他转请斯大林立即向蒋介石施压。他还在18日亲自致函斯大林，指出：“为了避免这样的内战，在苏联方面采取的措施来影响蒋介石的同时，还应该在美国、英国和其它国家掀起相应的运动，这将对中国政府施加一定的压力并在一定程度上影响中国的舆论。”</p>
 <p>1941年1月20日，季米特洛夫与莫洛托夫就这一事件进行了专门的谈话，莫洛托夫提醒季米特洛夫不能只听延安一面之词，“为了讨论和采取相应的措施，对已发生的事我们应获得更确切的情报。”</p>
-<p>次日，斯大林会见了季米特洛夫，斯大林讲得更加直戳了当：新四军方面对此事件恐怕也同样负有责任，有必要了解，叶挺“是否为此事件（的发生）提供了借口”。</p>
+<p>次日，斯大林会见了季米特洛夫，斯大林讲得更加直截了当：新四军方面对此事件恐怕也同样负有责任，有必要了解，叶挺“是否为此事件（的发生）提供了借口”。</p>
 <p>针对毛泽东坚持要在政治、军事两方面对蒋介石国民党进行报复，季米特洛夫在2月6日的电报中提出了批评：“我们认为，决裂并非不可避免。你们不应采取分裂的方针。正相反，在依靠主张保存抗日统一战线的群众的同时，共产党应采取一切取决于它自己的行动，来避免决裂。请求你们重新审查自己的立场并告知你们的考虑和建议。”</p>
 <p>莫斯科方面的态度，显然让毛非常不满。他在党内曾再三说：要打退蒋介石的进攻，就必须在政治和军事两方面都展开攻势。“问题是远方的政策与我们所想的相左，三个月来几经往复，尚未解决。”要采取报复措施，非有重武器和相关的技术人员不可，“没有飞机及攻城部队，夺取兰州及甘、凉、肃三州是不可能的”，“故目前我们在政治上取猛烈攻势，而在军事上暂时还只能取守势。”</p>
-<p><strong>中共<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%81%87%E6%8A%97%E6%97%A5.md#1">假抗日</a>真夺权</strong></p>
-<p>中共在中条山战役中的态度就说明了他的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%81%87%E6%8A%97%E6%97%A5.md#1">假抗日</a>。中条山战役是1941年5月上旬至6月上旬，10万日军集结发动对20万国民政府军所住中条山根据地的进攻，最终以国民政府军完全陷落告终，前后30天左右。</p>
+<p><strong>中共假抗日真夺权</strong></p>
+<p>中共在中条山战役中的态度就说明了他的假抗日。中条山战役是1941年5月上旬至6月上旬，10万日军集结发动对20万国民政府军所驻中条山根据地的进攻，最终以国民政府军完全陷落告终，前后30天左右。</p>
 <p>面对日军的精心准备和志在必夺的集结态势，国民政府军事委员会曾要求在临近地区活动的八路军主力采取牵制活动，以配合国民党守军作战。身负中条山作战指挥之责的卫立煌，也亲自致电彭德怀，要求八路军予以配合。</p>
-<p>但中共方面却在战役开始后近两周的时间内均未采取作战行动，当时毛给彭德怀的指示是：“关于卫立煌要求配合作战，请拟一部署计划电告，此计划中在太南太岳两线者与战事发生时虽不是猛打，但应准备施行之，在其他区域只做样子，不应实施。”即日本军队从晋南发动进攻，延安却指示彭德怀“我们主要配合区域应是晋东南与冀南，其他作为次要配合区域”。</p>
-<p>对此，苏联军事顾问崔可夫也多次专门找驻重庆的周恩来提出批评。而毛却再度对彭德怀强调：“目前方针是必须打日本，但又绝不可打得太凶。不打则国民党不能谅解，中间派亦会说话，但如打得太凶，则有相反危险，日本将转向我们报复，国民党坐收渔利，并将进攻边区。恩来电是转给你作参考的，他电中反映国民党及外国人的压力，我们不可不听，又不可尽听。望按此总方针调节我们的行动，在一部分地区打得大些，而在其他地区则打得小些，使国民党觉得我们真在打就好了。”</p>
+<p>但中共方面却在战役开始后近两周的时间内均未采取作战行动，当时毛给彭德怀的指示是：“关于卫立煌要求配合作战，请拟一部署计划电告，此计划中在太南太岳两线者与战事发生时虽不是猛打，但应准备施行之，在其它区域只做样子，不应实施。”即日本军队从晋南发动进攻，延安却指示彭德怀“我们主要配合区域应是晋东南与冀南，其它作为次要配合区域”。</p>
+<p>对此，苏联军事顾问崔可夫也多次专门找驻重庆的周恩来提出批评。而毛却再度对彭德怀强调：“目前方针是必须打日本，但又绝不可打得太凶。不打则国民党不能谅解，中间派亦会说话，但如打得太凶，则有相反危险，日本将转向我们报复，国民党坐收渔利，并将进攻边区。恩来电是转给你作参考的，他电中反映国民党及外国人的压力，我们不可不听，又不可尽听。望按此总方针调节我们的行动，在一部分地区打得大些，而在其它地区则打得小些，使国民党觉得我们真在打就好了。”</p>
 <p>毛泽东只想如何壮大自己，消极对待与国民政府军共同抗日，这一情况自然很快就反映到共产国际。对于毛就此做出的申诉，季米特洛夫答复说：“我们从这里难以提出任何军事性的建议，但我们十分清楚的一点是：尽管存在许多困难，你们必须坚持采取一切可能采取的积极行动来反抗日本的进攻。中国人民民族战争今后的命运共产党及其军队的未来均取决于此。”</p>
 <p>1942年6月16日，季米特洛夫给毛的电报中再度重申：“要求中国共产党作出一切努力，改善同蒋介石的关系，巩固中国的抗日统一战线。”</p>
 <p>1944年2月29日，季米特洛夫在电报中要求毛泽东“告知在共产党和蒋介石之间的相互关系中是否有某种较重大的变化，如果有，这些变化有何具体体现。能否就边区的情况，你们军队和游击队反对日本人的行动和共产党获得的一些主要内容，每周或每十天给我们一份简报？这在当前的复杂形势下是非常有益的”。</p>
@@ -48,45 +48,36 @@
 <p>在共产党最终夺取政权的目标上，无论是苏共斯大林还是中共的毛泽东都是一致的。但出于不同的立场，毛根本不考虑时值日本入侵的国难时期，置民族大义于不顾，必欲借日本侵略者之手，消灭国民党政府军队，从而壮大自己。而斯大林却害怕日本对苏联造成直接威胁，千方百计让中国人特别是蒋介石把日本拖入中国泥潭，这就是共产国际要求中共务必与蒋建立抗日统一战线的根本原因。</p>
 <p>责任编辑：莆山</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/5/3/30/n871100.md#1">国共合作？ 别忘了两蒋血泪党训</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/11/13/n2721036.md#1">李瑛：谈“联俄联共”与“国共合作”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/10/29/n3068961.md#1">抗战历史真相：毛泽东为何感谢日本侵华</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/8/2/n9488527.md#1">红军走过浴血荣光14年抗战？历史学家揭谎言</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/5/3/30/n871100.md#1">国共合作？ 别忘了两蒋血泪党训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/11/13/n2721036.md#1">李瑛：谈“联俄联共”与“国共合作”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/10/29/n3068961.md#1">抗战历史真相：毛泽东为何感谢日本侵华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/8/2/n9488527.md#1">红军走过浴血荣光14年抗战？历史学家揭谎言</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/20/n10158455.md#1" target="_blank">林辉：为何“六九届”学生少有成功人士？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/23/n9661042.md#1" target="_blank">修大法顽疾遁无形 做好人春风化雨润无声</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/31/n10265684.md#1" target="_blank">共产暴政录：中共为什么要败坏中国人的道德</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961143.md#1">清明不扫墓？ 古人在清明节从事什么活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13959038.md#1">他说了什么好话 让阎王为他安排了大福分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963576.md#1">狄仁杰为什么会有深藏不露的医疗绝技？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966914.md#1">【财商天下】抢占矿产资源 中国雇佣军活跃非洲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13966952.md#1">【时事金扫描】“蔡麦会”习近平身段放软</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966882.md#1">【中国禁闻】山东舰驶近台湾 美航母前往戒备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964616.md#1">“福州最富军医”被曝光 牵出活摘器官内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/5/n13965541.md#1">中共公安部人事洗牌 两退位高官均涉丑闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/5/n13965723.md#1">岳山：习近平的统一大市场成辟谣目标 涉内斗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964761.md#1">汤唯偕韩籍夫回娘家扫墓 两人随亲友素颜出镜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/5/n13965981.md#1">将易烊千玺摆上台 成龙遭大陆网民围剿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13965084.md#1">林青霞获港大颁名誉博士学位 深夜发文感恩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966855.md#1">偕法国丈夫随马克龙访华 巩俐国籍问题引争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966928.md#1">杨幂公开午餐菜单 显示瘦身不用挨饿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966036.md#1">组图：纽约国际车展启幕 电动车成趋势</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958973.md#1">减重降压 这种茶每天来一杯还可抗癌降血糖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966278.md#1">衣服不在多 “穿搭力”让你穿出迷人的光彩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949147.md#1">为什么买卖房屋都要找中介？ 靠自己不行吗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966458.md#1">旅馆员工分享最难忘的经验 千奇百怪都有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/7/n13967677.htm">张菁：中共“15万精兵计划”为何被共产国际否决</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967677.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/4/7/n13967677.htm">张菁：中共“15万精兵计划”为何被共产国际否决</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/7/n13967677.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
