--- a/gb/24/4/11/n14223697.md
+++ b/gb/24/4/11/n14223697.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【秦鹏观察】越南华女被判死刑 中国地产商慌了？</h2>
 <h6></h6>
 <hr>
-	<p>【大纪元2024年04月12日讯】观众朋友们，大家好，欢迎收看《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e7%a7%a6%e9%b5%ac%e8%a7%80%e5%af%9f.md#1">秦鹏观察</a>》。今天是美东时间4月11日，京港台时间4月12日。</p>
+	<p>【大纪元2024年04月12日讯】观众朋友们，大家好，欢迎收看《<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e7%a7%a6%e9%b5%ac%e8%a7%80%e5%af%9f.md#1">秦鹏观察</a>》。今天是美东时间4月11日，京港台时间4月12日。</p>
 <p>今天焦点：越南女首富、最大的房地产华裔商人张美兰被判死刑，震惊了世界，也冲上了中国热搜榜，中国“许家印”们慌了？</p>
 <p>中国名画家范曾86岁娶36岁娇妻，真相大翻转，局中有局？</p>
 <p>节目开始之前，我想先谈一下神韵演出的事。前几天，我和儿子、还有几个朋友一起观看了神韵演出，看后真的很感慨，这才是真正的人类传统的文化，这是浊世的一股清流，纯善纯美的演出，能够让我们忘记乱世的纷扰，沉浸在神佛的普照之中。目前，神韵的8个演出团还在各地巡演，包括台湾和纽约等地，有艺术家盛赞，神韵演出是亿万人的渴望， 纽约艺术家则赞美神韵超凡脱俗、改变人生，我认为真的是这样，所以在这里隆重的推荐观众朋友们如果有机会一定要去看一下神韵，这是一生必看的一场杰出的盛典。</p>
 <h2>越南女版许家印被判死刑 众多中国地产商人慌了？</h2>
 <p>当地时间4月11日，越南的房地产大亨张美兰，被胡志明市的一家法院判处死刑。她被指控涉嫌金融诈骗125亿美元，这个金额相当于越南2022年GDP的近3%。</p>
 <p>越南媒体报导，该案其它84名被告，分别被判处三年缓刑至无期徒刑等不同刑罚。其中，张美兰丈夫、香港商人朱立基（Eric Chu）被判处9年徒刑，而她的侄女，其房地产公司万盛发的CEO张惠云，被判17年徒刑。</p>
-<p>张美兰的一位律师告诉路透社，她对贪污和贿赂指控表示无罪。“她当然会对判决提出上诉，”律师补充。</p>
+<p>张美兰的一位律师告诉路透社，她对贪污和贿赂指控表示无罪。“她当然会对判决提出上诉，”律师补充。（<span style="color: #0000ff;"><strong>相关文章：<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/11/n14223343.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener noreferrer">涉越南最大欺诈案 华裔女富豪被判死刑</a></strong></span>）</p>
 <h3>1、掏空西贡商业银行？第五大银行被挤兑</h3>
 <p>检方调查人员指控，2012 年至 2022 年间，张美兰通过几十名代理人，非法控制了西贡股份商业银行91.5%的股份，这是越南的第五大银行。随后，该银行发放了2,500笔贷款给张美兰旗下的公司，总额高达1000万亿越南盾，折合美元大约440亿美元，占该银行同期贷款的93%，剩下的7%借给了银行老客户。</p>
 <p>这400亿美元贷款，占到了越南去年 GDP4,090 亿美元的10.7%。她被指控给银行造成64.6兆越南盾损失。</p>
@@ -29,7 +29,7 @@
 <p>面对疯涨的楼市，越南当局掀起了一轮监管风暴。2022年8月，越南副总理黎文成明确表态，将加强对房企债券销售的监督，以避免投机和价格操纵；2022年9月，越南央行副行长陶明秀警告称，央行将加强对银行贷款的审查，特别是在房地产项目等风险领域。</p>
 <p>于是，就有了地产大亨张美兰的被捕。2022年10月初，越南警方宣布，正式拘留张美兰等人。据通报，张美兰涉嫌在2018年至2019年期间非法发行债券，筹集了数万亿越南盾。</p>
 <h3>4、中国网民：严惩中国许家印</h3>
-<p>这个消息，在中国冲上了热搜排行榜，也引发了网民的热议。他们纷纷说：“字越少，新闻越短”，“建议许家印也这样”，还有人嘲讽“越南比我们进步多了！”“先说清楚奥，我不是越吹，越南的法律，显然还是比较严肃的那种”；“越南许家印？”“咱们这在媒体与法学家，内部人士的共同推动下，已经变成制度性fb（腐败）了”；“125亿美元也就0.09兆元人民币，皮带许的零头都不到？”“她为什么不润出去”，“国内的一比，真是洒洒水”；“养肥了就收割了，别以为不知道，就看办不办你”；“肖剑华在里面肯定无比庆幸”；“专治社会，富人的资产都是为政要保存的，要有这样的自觉”；“恒大融创碧桂园万科瑟瑟发抖”。“挺好的，接下来把麦克风给老胡”。</p>
+<p>这个消息，在中国冲上了热搜排行榜，也引发了网民的热议。他们纷纷说：“字越少，新闻越短”，“建议许家印也这样”，还有人嘲讽“越南比我们进步多了！”“先说清楚奥，我不是越吹，越南的法律，显然还是比较严肃的那种”；“越南许家印？”“咱们这在媒体与法学家，内部人士的共同推动下，已经变成制度性fb（腐败）了”；“125亿美元也就0.09兆元人民币，皮带许的零头都不到？”“她为什么不润出去”，“国内的一比，真是洒洒水”；“养肥了就收割了，别以为不知道，就看办不办你”；“肖剑华在里面肯定无比庆幸”；“专治社会，富人的资产都是为政要保存的，要有这样的自觉”；“恒大融创碧桂园万科瑟瑟发抖”。“挺好的，接下来把麦克风给老胡”。（<span style="color: #0000ff;"><strong>相关文章：<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/24/2/10/n14177615.md#1 ?utm_term=djy_a_rec_in" target="_blank" rel="noopener noreferrer">徐客：许家印案涉高层暗战 传被追问三件事</a>／<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/12/3/n14128737.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener noreferrer">恒大更多内幕曝光 许家印背后靠山引关</a></strong></span>注）</p>
 <p>确实呢，如果按照后果来看，中国部分商人和官员给民众造成的损失也非常巨大，比如多家村镇银行被官商勾结掏空，中融信托等爆雷、上千亿理财被停止兑付，包商银行、锦州银行、自贡银行等也被掏空&#8230;&#8230;</p>
 <p>但是，和张美兰案相比，我们几乎看不到中国商人或官员被严厉处罚。气质，许家印给那么多银行和买房者造成巨大损失之后，居然只被罚了4700万人民币，恒大公司本身被罚41.75亿。而背后的原因是什么呢？这些商人多为中共高官权贵的白手套，所以除非要对他们灭口，否则中共当局还是对他们惺惺相惜，从轻处置。</p>
 <p>当然，我这里并不想美化同为社会主义政权的越南。而且，以我对商人的了解，我感觉张美兰案可能也有猫腻，因为越南地产价格飙涨，这也是当局的问题，不能一板子打在地产商头上，而且按理说张美兰还得起这些钱，而类似用空壳公司贷款在中国更是司空见惯，为什么张美兰被单独抓了呢？其实，我看到这个案子的第一反应，也是他们为什么不润呢？要知道“君子不立危墙之下”。也许，他们也是太迷信自己背后的权贵势力，错把自己当作赵家人了。</p>
@@ -53,45 +53,48 @@
 <p>不过，我对此不敢完全苟同，因为，如果我们翻开中共党史，会发现，被党媒公开宣传的那些高官名人，包括刘少奇、毛泽东、周恩来、彭德怀等等，都曾经在历史上疯狂斗争过别人。文革中，一家人反目成仇、师生之间相互斗争的故事，更是比比皆是。前几天，美国网飞（Netflix）版《三体》问世，更把当时中国著名高校清华大学对老师公开批斗的丑陋历史，揭得体无完肤。</p>
 <p>所以，我的观点是，真正应该揭露和否定的是谁呢？是中共，和它泯灭人性的制度。作为普通人，我觉得没必要对大加挞伐，除非他犯下了杀人等不可饶恕的罪恶。</p>
 <p>第四个看点，故事背后的故事</p>
-<p>其实，我更好奇，为什么范增的故事现在这样放纵的发酵。因为，按理说，这段时间，最大的新闻，是靠近中国边境仅65公立的俄罗斯的哈巴罗夫斯克市，发生了核泄露。而中共当局拒不报导，在外媒报导多天之后，中共领馆和安全部门才出来说没事儿，却要求居民不要前往。这个事件，在网上也引起了很多网民的不满。</p>
+<p>其实，我更好奇，为什么范增的故事现在这样放纵的发酵。因为，按理说，这段时间，最大的新闻，是靠近中国边境仅65公里的俄罗斯的哈巴罗夫斯克市，发生了核泄露。而中共当局拒不报导，在外媒报导多天之后，中共领馆和安全部门才出来说没事儿，却要求居民不要前往。这个事件，在网上也引起了很多网民的不满。</p>
 <p>很多人嘲讽，俄爹的核辐射都是安全的，“日本在国际原子能机构的监督下排核废水却招来一片谩骂，而俄罗斯核泄露造成的核辐射超1600倍国内媒体装聋作哑，禽兽不如的东西”。还有人嘲笑中共的两个好邻居俄罗斯和朝鲜，一个“把核废料场建在边境线上”，“一个邻居把核试验场建在边境线上”。</p>
 <p>所以，大家说，火热的范增的婚姻故事，是不是背后还有什么故事呢？</p>
 <p>好了，我们今天的节目就到这里。请喜欢我节目的朋友，在评论区订阅我的新频道。谢谢，我们下次节目见！</p>
 <p>欢迎订阅YouTube频道：<ahref="https://www.youtube.com/channel/UCjix7du7PHahnSJm8dctzDA">https://www.youtube.com/channel/UCjix7du7PHahnSJm8dctzDA</a><br />
 欢迎订阅干净世界频道：<ahref="https://www.ganjing.com/zh-CN/channel/1eiqjdnq7go7cVXgAJjJp39H61270c">https://www.ganjing.com/zh-CN/channel/1eiqjdnq7go7cVXgAJjJp39H61270c</a></p>
-<p>《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e7%a7%a6%e9%b5%ac%e8%a7%80%e5%af%9f.md#1">秦鹏观察</a>》制作组</p>
+<p>《<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e7%a7%a6%e9%b5%ac%e8%a7%80%e5%af%9f.md#1">秦鹏观察</a>》制作组</p>
 <p>责任编辑：李昊</p>
+<h2>推荐阅读</h2>
+<h3>? <span style="color: #0000ff;"><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/21/10/2/n13276553.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">【名家专栏】中国房地产崩溃恐毁全球经济吗？</a></span></h3>
+<h3>? <span style="color: #0000ff;"><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/3/n14217611.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">上海豪宅降价近千万求售 房主在痛苦中挣扎</a></span></h3>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/2/n14216963.md#1">【秦鹏观察】拜习通话3看点 耶伦访华当面警告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/5/n14218503.md#1">【秦鹏观察】习遇六挑战 核心原因被美大使道破</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14221067.md#1">【秦鹏观察】耶伦访华发2警告 获4项成果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14222121.md#1">【秦鹏观察】金价又暴涨 该买吗？巴菲特如何看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216963.md#1">【秦鹏观察】拜习通话3看点 耶伦访华当面警告</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/5/n14218503.md#1">【秦鹏观察】习遇六挑战 核心原因被美大使道破</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/8/n14221067.md#1">【秦鹏观察】耶伦访华发2警告 获4项成果</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/9/n14222121.md#1">【秦鹏观察】金价又暴涨 该买吗？巴菲特如何看</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/22/n10239833.md#1" target="_blank">袁斌：重温“革命烈士”夏明翰的《就义诗》（下）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/10/n10774701.md#1" target="_blank">推倒这堵墙——里根总统的柏林墙演讲</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221642.md#1">“日食”的现象与奥秘 你知道多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/5/n14218770.md#1">5至8岁学龄儿童的行为（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/4/n14218210.md#1">【古道人生】两名医同时诊病所见 原来死生在命不在医</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/5/n14218553.md#1">【未解之谜】灾难背后有玄机 何人能逃离生死劫数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/7/n14219976.md#1">1岁时从高处摔落而濒死 女子见到自己的一生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222422.md#1">【晚间新闻】中俄边境惊爆核泄漏 超标1600倍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222406.md#1">【环球直击】FBI局长：中共倾力破坏世界安全和经济</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222868.md#1">【时事军事】中国雇佣兵战场呼救 曝俄军隐情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222694.md#1">西藏学生抗议封校遭镇压 二十多人死亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14222092.md#1">有关Costco 你需要了解的11个小秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14222101.md#1">李嘉诚在香港再度7折卖房 引发热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14222059.md#1">伊能静体重达峰值 分享一招10天瘦6公斤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222372.md#1">宣布和黄子佼终止合作 陈明珠：抵触我道德底线</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222771.md#1">胡歌双颊凹陷冒白发 零滤镜下被指老了10岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14222122.md#1">李易峰遭封杀2年现身机场 被粉丝包围跟拍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222820.md#1">儿子贴父亲黑白照划清界线 吴镇宇发文怒批</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/6/n14219670.md#1">【健康新视界】千万不要用白醋清理这些物品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222439.md#1">女性采日本传统饮食 大脑比较不会“缩水”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223212.md#1">用正确方法存放莴苣 放6周都不会坏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221765.md#1">为什么喝酒会导致排便异常？ 让医生告诉你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14221103.md#1">组图：韩国仁川樱花公园 花海美不胜收</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/11/n14223697.htm">【秦鹏观察】越南华女被判死刑 中国地产商慌了？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223697.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/4/11/n14223697.htm">【秦鹏观察】越南华女被判死刑 中国地产商慌了？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/11/n14223697.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
